# RBE_Capstone

./: .gitignore  .gitmodules  LICENSE  README.md  test.py
env_setup/: Dockerfile  docker-compose.yaml  setup.sh
env_setup_david/: docker-compose.yaml  running_terminal_example.txt  setup.sh
env_setup_david/ros1/: Dockerfile  docker-compose.yaml  setup.sh
env_setup_david/ros2/: Dockerfile  docker-compose.yaml  setup.sh
ros2_ws/: warehouse.world
ros2_ws/extra_scripts/: installing_stuff.sh
ros2_ws/src/jackal_description_fre/launch/: description.launch
ros2_ws/src/jackal_description_fre/urdf/: accessories.urdf.xacro
ros2_ws/src/lms1xx_fre/urdf/: sick_lms1xx.urdf.xacro
ros2_ws/src/velodyne_description/launch/: example.launch
ros2_ws/src/warehouse_simulation/: CMakeLists.txt  package.xml  setup.py
ros2_ws/src/warehouse_simulation/description/: camera.xacro
ros2_ws/src/warehouse_simulation/launch/: warehouse_simulation.launch  warehouse_simulation.launch.py
ros2_ws/src/warehouse_simulation/models/fire/: model.config  model.sdf
ros2_ws/src/warehouse_simulation/models/fire/materials/scripts/: gazebo.material
ros2_ws/src/warehouse_simulation/models/fire_generator/: metadata.pbtxt  model.config  model.sdf
ros2_ws/src/warehouse_simulation/models/fog_generator/: model.sdf
ros2_ws/src/warehouse_simulation/models/my_robot/: model.config  model.sdf
ros2_ws/src/warehouse_simulation/scripts/: object_detector.py  test_warehouse_generator.py  warehouse_generator.py
ros2_ws/src/warehouse_simulation/worlds/: empty_world.sdf  particle_emitter.sdf  simple_warehouse.sdf  simple_warehouse.world  warehouse_full.sdf
