<package format="2">
  <name>warehouse_simulation</name>
  <version>0.0.0</version>
  <description>Warehouse simulation package</description>
  <maintainer email="user@example.com">Your Name</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>gazebo_ros</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>